2007-03-11  Paul J Stevens <paul@nfg.nl>

	* acinclude.m4, configure:
	final touch on sqlite autocreate
	* debian/changelog:
	2.2.4 packages
	* config.c:
	expand tilde char in db path (closes #529)
	* debian/dbmail.postinst:
	fix sed error

2007-03-10  Paul J Stevens <paul@nfg.nl>

	* debian/dbmail.postinst:
	avoid slash in sed s commands
	* debian/changelog, debian/dbmail.postinst:
	2.2.4 rc1 packages
	* dbmail-mailbox.c:
	fix for export problem #590

2007-03-09  Paul J Stevens <paul@nfg.nl>

	* debian/po/ml.po, debian/po/pt.po, debian/po/ta.po:
	fix broken po files
	* contrib/sql2sql/mysql2pgsql.sh:
	minor fixes
	* Makefile.in, acinclude.m4, configure, configure.in, dbmail.h.in, 
	  man/Makefile.in, modules/Makefile.in, modules/dbsqlite.c:
	add auto-creation of database to sqlite driver

2007-03-08  Paul J Stevens <paul@nfg.nl>

	* debian/po/ml.po, debian/po/pt.po, debian/po/ta.po:
	debian po updates

2007-03-07  Aaron Stone  <aaron@serendipity.cx>

	* dbmail-message.c:
	It is not a short write if getslen == 1 and putslen == 0 (why does
	this happen?) (closes bug #525)
	* dbmail-mailbox.c:
	Always prepend headers to a dumped message, in case the header block
	does not come first. Also try asking the database to give the blocks
	in the correct order in the first place (closes bug #520)

2007-03-07  Paul J Stevens <paul@nfg.nl>

	* db.c, dbmail-imapsession.c, dbmail-imapsession.h, dbmail-message.c,
	  dbmailtypes.h, imap4.c, imapcommands.c, test-scripts/testbox,
	  test-scripts/testimap.py:
	fix and extend imap flags handling (bug #519, #381)

2007-03-06  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_misc.c:
	added testcase for mailbox_remove_namespace
	* check_dbmail_imapd.c:
	add envelope test
	* test-scripts/testimap.py:
	fix false negatives after recent_flag changes
	* debian/dbmail.postinst, debian/dbmail.postrm:
	debian postinst fixes
	* contrib/sql2sql/mysql2pgsql.sh:
	adding migration script
	* contrib/mailbox2dbmail/mailbox2dbmail: